// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TestResultPrintModal with multiplex results in Pxp App matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    aria-hidden="true"
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay sr-test-results-modal-overlay"
      >
        <div
          aria-label="Printable test result"
          aria-modal="true"
          class="ReactModal__Content sr-test-results-modal-content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
          >
            <div
              lang="es"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                  data-icon="globe"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                    fill="currentColor"
                  />
                </svg>
                Español
              </button>
            </div>
            <div
              class="sr-result-print-buttons dont-print"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                Close
              </button>
              <button
                class="usa-button"
                type="button"
              >
                Print
              </button>
            </div>
          </div>
          <div
            class="sr-test-result-report"
          >
            <header
              class="display-flex flex-align-end flex-justify margin-bottom-1"
            >
              <h1>
                Test results: COVID-19 and flu
              </h1>
              <img
                alt="SimpleReport logo"
                class="sr-print-logo dont-print"
                src="simplereport-logo-black.svg"
              />
              <h2
                class="display-none sr-show-on-print"
              >
                SimpleReport
              </h2>
            </header>
            <main>
              <section
                class="sr-result-section sr-result-patient-details"
              >
                <h2>
                  Patient details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Name
                    </b>
                    <div>
                      First Middle Last
                    </div>
                  </li>
                  <li>
                    <b>
                      Date of birth
                    </b>
                    <div>
                      08/07/1990
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-facility-details"
              >
                <h2>
                  Testing facility details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Facility name
                    </b>
                    <div>
                      Facility Name
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility phone
                    </b>
                    <div>
                      6318675309
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility address
                    </b>
                    <div
                      class="sr-result-facility-details-address"
                    >
                      <span>
                        555 Fake St
                      </span>
                      <span>
                        Raleigh
                        , 
                        NC
                         
                        27601
                      </span>
                    </div>
                  </li>
                  <li>
                    <b>
                      CLIA number
                    </b>
                    <div>
                      12D4567890
                    </div>
                  </li>
                  <li>
                    <b>
                      Ordering provider
                    </b>
                    <div>
                      Ordering Provider
                    </div>
                  </li>
                  <li>
                    <b>
                      NPI
                    </b>
                    <div>
                      fake npi for pxp
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-test-details"
              >
                <h2>
                  Test details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Test ID
                    </b>
                    <div>
                      id
                    </div>
                  </li>
                  <li>
                    <b>
                      Test name
                    </b>
                    <div>
                      Fake device
                    </div>
                  </li>
                  <li>
                    <b>
                      Test device
                    </b>
                    <div />
                  </li>
                  <li
                    class="sr-margin-bottom-28px"
                  >
                    <b>
                      Test date
                    </b>
                    <div>
                      01/28/2022 5:56pm
                    </div>
                  </li>
                  <li>
                    <b>
                      COVID-19
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Negative
                        </span>
                        <span>
                           
                          (-)
                        </span>
                      </strong>
                    </div>
                  </li>
                  <li>
                    <b>
                      Flu A
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Negative
                        </span>
                        <span>
                           
                          (-)
                        </span>
                      </strong>
                    </div>
                  </li>
                  <li>
                    <b>
                      Flu B
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Negative
                        </span>
                        <span>
                           
                          (-)
                        </span>
                      </strong>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-next-steps"
              >
                <h2>
                  More information
                </h2>
                <div
                  class=""
                >
                  <p>
                    Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
                  </p>
                  <ul
                    class="sr-multi-column"
                  >
                    <li>
                      Fever or chills
                    </li>
                    <li>
                      Cough
                    </li>
                    <li>
                      Shortness of breath or difficulty breathing
                    </li>
                    <li>
                      Fatigue
                    </li>
                    <li>
                      Muscle or body aches
                    </li>
                    <li>
                      Headache
                    </li>
                    <li>
                      Loss of taste or smell
                    </li>
                    <li>
                      Sore throat
                    </li>
                    <li>
                      Congestion or runny nose
                    </li>
                    <li>
                      Nausea or vomiting
                    </li>
                    <li>
                      Diarrhea
                    </li>
                  </ul>
                  <p>
                    For more information, please visit the 
                    <a
                      href="https://www.cdc.gov/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Centers for Disease Control and Prevention (CDC)
                    </a>
                     website or contact
your local health department.
                  </p>
                </div>
              </section>
            </main>
            <footer>
              <p>
                Test result printed
                 
                1/1/2021, 12:00:00 AM
              </p>
            </footer>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay sr-test-results-modal-overlay"
    >
      <div
        aria-label="Printable test result"
        aria-modal="true"
        class="ReactModal__Content sr-test-results-modal-content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
        >
          <div
            lang="es"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                  fill="currentColor"
                />
              </svg>
              Español
            </button>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
        <div
          class="sr-test-result-report"
        >
          <header
            class="display-flex flex-align-end flex-justify margin-bottom-1"
          >
            <h1>
              Test results: COVID-19 and flu
            </h1>
            <img
              alt="SimpleReport logo"
              class="sr-print-logo dont-print"
              src="simplereport-logo-black.svg"
            />
            <h2
              class="display-none sr-show-on-print"
            >
              SimpleReport
            </h2>
          </header>
          <main>
            <section
              class="sr-result-section sr-result-patient-details"
            >
              <h2>
                Patient details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Name
                  </b>
                  <div>
                    First Middle Last
                  </div>
                </li>
                <li>
                  <b>
                    Date of birth
                  </b>
                  <div>
                    08/07/1990
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-facility-details"
            >
              <h2>
                Testing facility details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Facility name
                  </b>
                  <div>
                    Facility Name
                  </div>
                </li>
                <li>
                  <b>
                    Facility phone
                  </b>
                  <div>
                    6318675309
                  </div>
                </li>
                <li>
                  <b>
                    Facility address
                  </b>
                  <div
                    class="sr-result-facility-details-address"
                  >
                    <span>
                      555 Fake St
                    </span>
                    <span>
                      Raleigh
                      , 
                      NC
                       
                      27601
                    </span>
                  </div>
                </li>
                <li>
                  <b>
                    CLIA number
                  </b>
                  <div>
                    12D4567890
                  </div>
                </li>
                <li>
                  <b>
                    Ordering provider
                  </b>
                  <div>
                    Ordering Provider
                  </div>
                </li>
                <li>
                  <b>
                    NPI
                  </b>
                  <div>
                    fake npi for pxp
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-test-details"
            >
              <h2>
                Test details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Test ID
                  </b>
                  <div>
                    id
                  </div>
                </li>
                <li>
                  <b>
                    Test name
                  </b>
                  <div>
                    Fake device
                  </div>
                </li>
                <li>
                  <b>
                    Test device
                  </b>
                  <div />
                </li>
                <li
                  class="sr-margin-bottom-28px"
                >
                  <b>
                    Test date
                  </b>
                  <div>
                    01/28/2022 5:56pm
                  </div>
                </li>
                <li>
                  <b>
                    COVID-19
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Negative
                      </span>
                      <span>
                         
                        (-)
                      </span>
                    </strong>
                  </div>
                </li>
                <li>
                  <b>
                    Flu A
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Negative
                      </span>
                      <span>
                         
                        (-)
                      </span>
                    </strong>
                  </div>
                </li>
                <li>
                  <b>
                    Flu B
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Negative
                      </span>
                      <span>
                         
                        (-)
                      </span>
                    </strong>
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-next-steps"
            >
              <h2>
                More information
              </h2>
              <div
                class=""
              >
                <p>
                  Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
                </p>
                <ul
                  class="sr-multi-column"
                >
                  <li>
                    Fever or chills
                  </li>
                  <li>
                    Cough
                  </li>
                  <li>
                    Shortness of breath or difficulty breathing
                  </li>
                  <li>
                    Fatigue
                  </li>
                  <li>
                    Muscle or body aches
                  </li>
                  <li>
                    Headache
                  </li>
                  <li>
                    Loss of taste or smell
                  </li>
                  <li>
                    Sore throat
                  </li>
                  <li>
                    Congestion or runny nose
                  </li>
                  <li>
                    Nausea or vomiting
                  </li>
                  <li>
                    Diarrhea
                  </li>
                </ul>
                <p>
                  For more information, please visit the 
                  <a
                    href="https://www.cdc.gov/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Centers for Disease Control and Prevention (CDC)
                  </a>
                   website or contact
your local health department.
                </p>
              </div>
            </section>
          </main>
          <footer>
            <p>
              Test result printed
               
              1/1/2021, 12:00:00 AM
            </p>
          </footer>
        </div>
        <div
          class="sr-result-print-buttons dont-print"
        >
          <button
            class="usa-button usa-button--unstyled"
            type="button"
          >
            Close
          </button>
          <button
            class="usa-button"
            type="button"
          >
            Print
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TestResultPrintModal with multiplex results in SimpleReport App matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    aria-hidden="true"
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay sr-test-results-modal-overlay"
      >
        <div
          aria-label="Printable test result"
          aria-modal="true"
          class="ReactModal__Content sr-test-results-modal-content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
          >
            <div
              lang="es"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                  data-icon="globe"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                    fill="currentColor"
                  />
                </svg>
                Español
              </button>
            </div>
            <div
              class="sr-result-print-buttons dont-print"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                Close
              </button>
              <button
                class="usa-button"
                type="button"
              >
                Print
              </button>
            </div>
          </div>
          <div
            class="sr-test-result-report"
          >
            <header
              class="display-flex flex-align-end flex-justify margin-bottom-1"
            >
              <h1>
                Test results: COVID-19 and flu
              </h1>
              <img
                alt="SimpleReport logo"
                class="sr-print-logo dont-print"
                src="simplereport-logo-black.svg"
              />
              <h2
                class="display-none sr-show-on-print"
              >
                SimpleReport
              </h2>
            </header>
            <main>
              <section
                class="sr-result-section sr-result-patient-details"
              >
                <h2>
                  Patient details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Name
                    </b>
                    <div>
                      First Middle Last
                    </div>
                  </li>
                  <li>
                    <b>
                      Date of birth
                    </b>
                    <div>
                      08/07/1990
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-facility-details"
              >
                <h2>
                  Testing facility details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Facility name
                    </b>
                    <div>
                      Facility Name
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility phone
                    </b>
                    <div>
                      6318675309
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility address
                    </b>
                    <div
                      class="sr-result-facility-details-address"
                    >
                      <span>
                        555 Fake St
                      </span>
                      <span>
                        Raleigh
                        , 
                        NC
                         
                        27601
                      </span>
                    </div>
                  </li>
                  <li>
                    <b>
                      CLIA number
                    </b>
                    <div>
                      12D4567890
                    </div>
                  </li>
                  <li>
                    <b>
                      Ordering provider
                    </b>
                    <div>
                      Ordering Provider
                    </div>
                  </li>
                  <li>
                    <b>
                      NPI
                    </b>
                    <div>
                      fake-npi
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-test-details"
              >
                <h2>
                  Test details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Test ID
                    </b>
                    <div>
                      id
                    </div>
                  </li>
                  <li>
                    <b>
                      Test name
                    </b>
                    <div>
                      Fake device
                    </div>
                  </li>
                  <li>
                    <b>
                      Test device
                    </b>
                    <div />
                  </li>
                  <li
                    class="sr-margin-bottom-28px"
                  >
                    <b>
                      Test date
                    </b>
                    <div>
                      01/28/2022 5:56pm
                    </div>
                  </li>
                  <li>
                    <b>
                      COVID-19
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Positive
                        </span>
                        <span>
                           
                          (+)
                        </span>
                      </strong>
                    </div>
                  </li>
                  <li>
                    <b>
                      Flu A
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Positive
                        </span>
                        <span>
                           
                          (+)
                        </span>
                      </strong>
                    </div>
                  </li>
                  <li>
                    <b>
                      Flu B
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Positive
                        </span>
                        <span>
                           
                          (+)
                        </span>
                      </strong>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-next-steps"
              >
                <h2>
                  More information
                </h2>
                <div
                  class="sr-margin-bottom-28px"
                >
                  <p
                    class="text-bold sr-guidance-heading"
                  >
                    For COVID-19:
                  </p>
                  <p>
                    Most people who get COVID-19 are able to recover at home. Make sure to follow CDC guidelines and local laws for people who are recovering at home and their caregivers, including:
                  </p>
                  <ul>
                    <li>
                      Stay home when you are sick, except to get medical care.
                    </li>
                    <li>
                      Stay home for 5 days. If you have no symptoms or your symptoms are resolving after 5 days, you can leave your house. Continue to wear a mask around others for 5 additional days.
                    </li>
                    <li>
                      If you are self isolating at home where others live, use a separate room and bathroom for sick household members (if possible). Clean any shared rooms as needed, to avoid transmitting the virus.
                    </li>
                    <li>
                      Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.
                    </li>
                    <li>
                      If soap and water are not available, use an alcohol-based hand sanitizer with at least 60% alcohol.
                    </li>
                    <li>
                      Have a supply of clean, disposable face masks. Everyone, no matter their COVID-19 diagnosis, should wear face masks while in the home.
                    </li>
                  </ul>
                  <p>
                    Watch for symptoms and learn when to seek emergency medical attention: 
                    <a
                      href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Symptoms of COVID-19
                    </a>
                     (cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html). If someone is showing any of these signs, seek emergency medical care immediately:
                  </p>
                  <ul>
                    <li>
                      Trouble breathing
                    </li>
                    <li>
                      Persistent chest pain/pressure
                    </li>
                    <li>
                      Confusion
                    </li>
                    <li>
                      Inability to wake or stay awake
                    </li>
                    <li>
                      Bluish lips or face
                    </li>
                  </ul>
                  <p>
                    Call 911 or call ahead to your local emergency room: Notify the operator that you are seeking care for someone who has or may have COVID-19.
                  </p>
                  <p>
                    For more information go to 
                    <a
                      href="https://www.cdc.gov/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      CDC.gov
                    </a>
                     or call 1-800-CDC-INFO (1-800-232-4636). Use the 
                    <a
                      href="https://www.cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      County Check Tool
                    </a>
                     (cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html) to understand your Community Level (COVID-19 risk and hospital capacity in your area), tips for prevention, and how to find vaccine, testing, and treatment resources.
                  </p>
                </div>
                <p
                  class="text-bold sr-guidance-heading"
                >
                  For flu A and B:
                </p>
                <p>
                  Most people with flu have mild illness and can recover at home. Stay at home and avoid contact with others until at least 24 hours after your fever is gone, except to get medical care or other necessities. Wear a face mask if you leave home, or cover coughs and sneezes with a tissue. Wash your hands often.
                </p>
                <p>
                  <a
                    href="https://www.cdc.gov/flu/highrisk"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    People at Higher Risk of Developing Flu–Related Complications
                  </a>
                   (cdc.gov/flu/highrisk) should contact a doctor as soon as possible to see if antiviral treatment is recommended.
                </p>
                <p>
                  For more information, visit 
                  <a
                    href="https://www.cdc.gov/flu/treatment/takingcare.htm"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                     Flu: What To Do If You Get Sick
                  </a>
                   (cdc.gov/flu/treatment/takingcare.htm).
                </p>
              </section>
            </main>
            <footer>
              <p>
                Test result printed
                 
                1/1/2021, 12:00:00 AM
              </p>
            </footer>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay sr-test-results-modal-overlay"
    >
      <div
        aria-label="Printable test result"
        aria-modal="true"
        class="ReactModal__Content sr-test-results-modal-content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
        >
          <div
            lang="es"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                  fill="currentColor"
                />
              </svg>
              Español
            </button>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
        <div
          class="sr-test-result-report"
        >
          <header
            class="display-flex flex-align-end flex-justify margin-bottom-1"
          >
            <h1>
              Test results: COVID-19 and flu
            </h1>
            <img
              alt="SimpleReport logo"
              class="sr-print-logo dont-print"
              src="simplereport-logo-black.svg"
            />
            <h2
              class="display-none sr-show-on-print"
            >
              SimpleReport
            </h2>
          </header>
          <main>
            <section
              class="sr-result-section sr-result-patient-details"
            >
              <h2>
                Patient details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Name
                  </b>
                  <div>
                    First Middle Last
                  </div>
                </li>
                <li>
                  <b>
                    Date of birth
                  </b>
                  <div>
                    08/07/1990
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-facility-details"
            >
              <h2>
                Testing facility details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Facility name
                  </b>
                  <div>
                    Facility Name
                  </div>
                </li>
                <li>
                  <b>
                    Facility phone
                  </b>
                  <div>
                    6318675309
                  </div>
                </li>
                <li>
                  <b>
                    Facility address
                  </b>
                  <div
                    class="sr-result-facility-details-address"
                  >
                    <span>
                      555 Fake St
                    </span>
                    <span>
                      Raleigh
                      , 
                      NC
                       
                      27601
                    </span>
                  </div>
                </li>
                <li>
                  <b>
                    CLIA number
                  </b>
                  <div>
                    12D4567890
                  </div>
                </li>
                <li>
                  <b>
                    Ordering provider
                  </b>
                  <div>
                    Ordering Provider
                  </div>
                </li>
                <li>
                  <b>
                    NPI
                  </b>
                  <div>
                    fake-npi
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-test-details"
            >
              <h2>
                Test details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Test ID
                  </b>
                  <div>
                    id
                  </div>
                </li>
                <li>
                  <b>
                    Test name
                  </b>
                  <div>
                    Fake device
                  </div>
                </li>
                <li>
                  <b>
                    Test device
                  </b>
                  <div />
                </li>
                <li
                  class="sr-margin-bottom-28px"
                >
                  <b>
                    Test date
                  </b>
                  <div>
                    01/28/2022 5:56pm
                  </div>
                </li>
                <li>
                  <b>
                    COVID-19
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Positive
                      </span>
                      <span>
                         
                        (+)
                      </span>
                    </strong>
                  </div>
                </li>
                <li>
                  <b>
                    Flu A
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Positive
                      </span>
                      <span>
                         
                        (+)
                      </span>
                    </strong>
                  </div>
                </li>
                <li>
                  <b>
                    Flu B
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Positive
                      </span>
                      <span>
                         
                        (+)
                      </span>
                    </strong>
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-next-steps"
            >
              <h2>
                More information
              </h2>
              <div
                class="sr-margin-bottom-28px"
              >
                <p
                  class="text-bold sr-guidance-heading"
                >
                  For COVID-19:
                </p>
                <p>
                  Most people who get COVID-19 are able to recover at home. Make sure to follow CDC guidelines and local laws for people who are recovering at home and their caregivers, including:
                </p>
                <ul>
                  <li>
                    Stay home when you are sick, except to get medical care.
                  </li>
                  <li>
                    Stay home for 5 days. If you have no symptoms or your symptoms are resolving after 5 days, you can leave your house. Continue to wear a mask around others for 5 additional days.
                  </li>
                  <li>
                    If you are self isolating at home where others live, use a separate room and bathroom for sick household members (if possible). Clean any shared rooms as needed, to avoid transmitting the virus.
                  </li>
                  <li>
                    Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food.
                  </li>
                  <li>
                    If soap and water are not available, use an alcohol-based hand sanitizer with at least 60% alcohol.
                  </li>
                  <li>
                    Have a supply of clean, disposable face masks. Everyone, no matter their COVID-19 diagnosis, should wear face masks while in the home.
                  </li>
                </ul>
                <p>
                  Watch for symptoms and learn when to seek emergency medical attention: 
                  <a
                    href="https://www.cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Symptoms of COVID-19
                  </a>
                   (cdc.gov/coronavirus/2019-ncov/symptoms-testing/symptoms.html). If someone is showing any of these signs, seek emergency medical care immediately:
                </p>
                <ul>
                  <li>
                    Trouble breathing
                  </li>
                  <li>
                    Persistent chest pain/pressure
                  </li>
                  <li>
                    Confusion
                  </li>
                  <li>
                    Inability to wake or stay awake
                  </li>
                  <li>
                    Bluish lips or face
                  </li>
                </ul>
                <p>
                  Call 911 or call ahead to your local emergency room: Notify the operator that you are seeking care for someone who has or may have COVID-19.
                </p>
                <p>
                  For more information go to 
                  <a
                    href="https://www.cdc.gov/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    CDC.gov
                  </a>
                   or call 1-800-CDC-INFO (1-800-232-4636). Use the 
                  <a
                    href="https://www.cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    County Check Tool
                  </a>
                   (cdc.gov/coronavirus/2019-ncov/your-health/covid-by-county.html) to understand your Community Level (COVID-19 risk and hospital capacity in your area), tips for prevention, and how to find vaccine, testing, and treatment resources.
                </p>
              </div>
              <p
                class="text-bold sr-guidance-heading"
              >
                For flu A and B:
              </p>
              <p>
                Most people with flu have mild illness and can recover at home. Stay at home and avoid contact with others until at least 24 hours after your fever is gone, except to get medical care or other necessities. Wear a face mask if you leave home, or cover coughs and sneezes with a tissue. Wash your hands often.
              </p>
              <p>
                <a
                  href="https://www.cdc.gov/flu/highrisk"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  People at Higher Risk of Developing Flu–Related Complications
                </a>
                 (cdc.gov/flu/highrisk) should contact a doctor as soon as possible to see if antiviral treatment is recommended.
              </p>
              <p>
                For more information, visit 
                <a
                  href="https://www.cdc.gov/flu/treatment/takingcare.htm"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                   Flu: What To Do If You Get Sick
                </a>
                 (cdc.gov/flu/treatment/takingcare.htm).
              </p>
            </section>
          </main>
          <footer>
            <p>
              Test result printed
               
              1/1/2021, 12:00:00 AM
            </p>
          </footer>
        </div>
        <div
          class="sr-result-print-buttons dont-print"
        >
          <button
            class="usa-button usa-button--unstyled"
            type="button"
          >
            Close
          </button>
          <button
            class="usa-button"
            type="button"
          >
            Print
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TestResultPrintModal with only COVID results matches screenshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body
    aria-hidden="true"
    class="ReactModal__Body--open"
  >
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div>
      <div
        class="ReactModal__Overlay sr-test-results-modal-overlay"
      >
        <div
          aria-label="Printable test result"
          aria-modal="true"
          class="ReactModal__Content sr-test-results-modal-content"
          role="dialog"
          tabindex="-1"
        >
          <div
            class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
          >
            <div
              lang="es"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                  data-icon="globe"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                    fill="currentColor"
                  />
                </svg>
                Español
              </button>
            </div>
            <div
              class="sr-result-print-buttons dont-print"
            >
              <button
                class="usa-button usa-button--unstyled"
                type="button"
              >
                Close
              </button>
              <button
                class="usa-button"
                type="button"
              >
                Print
              </button>
            </div>
          </div>
          <div
            class="sr-test-result-report"
          >
            <header
              class="display-flex flex-align-end flex-justify margin-bottom-1"
            >
              <h1>
                Test result: COVID-19
              </h1>
              <img
                alt="SimpleReport logo"
                class="sr-print-logo dont-print"
                src="simplereport-logo-black.svg"
              />
              <h2
                class="display-none sr-show-on-print"
              >
                SimpleReport
              </h2>
            </header>
            <main>
              <section
                class="sr-result-section sr-result-patient-details"
              >
                <h2>
                  Patient details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Name
                    </b>
                    <div>
                      First Middle Last
                    </div>
                  </li>
                  <li>
                    <b>
                      Date of birth
                    </b>
                    <div>
                      08/07/1990
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-facility-details"
              >
                <h2>
                  Testing facility details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Facility name
                    </b>
                    <div>
                      Facility Name
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility phone
                    </b>
                    <div>
                      6318675309
                    </div>
                  </li>
                  <li>
                    <b>
                      Facility address
                    </b>
                    <div
                      class="sr-result-facility-details-address"
                    >
                      <span>
                        555 Fake St
                      </span>
                      <span>
                        Raleigh
                        , 
                        NC
                         
                        27601
                      </span>
                    </div>
                  </li>
                  <li>
                    <b>
                      CLIA number
                    </b>
                    <div>
                      12D4567890
                    </div>
                  </li>
                  <li>
                    <b>
                      Ordering provider
                    </b>
                    <div>
                      Ordering Provider
                    </div>
                  </li>
                  <li>
                    <b>
                      NPI
                    </b>
                    <div>
                      fake-npi
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-test-details"
              >
                <h2>
                  Test details
                </h2>
                <ul
                  class="sr-details-list"
                >
                  <li>
                    <b>
                      Test ID
                    </b>
                    <div>
                      id
                    </div>
                  </li>
                  <li>
                    <b>
                      Test name
                    </b>
                    <div>
                      Fake device
                    </div>
                  </li>
                  <li>
                    <b>
                      Test device
                    </b>
                    <div />
                  </li>
                  <li
                    class="sr-margin-bottom-28px"
                  >
                    <b>
                      Test date
                    </b>
                    <div>
                      01/28/2022 5:56pm
                    </div>
                  </li>
                  <li>
                    <b>
                      COVID-19
                    </b>
                    <div>
                      <strong>
                        <span
                          class="text-uppercase"
                        >
                          Negative
                        </span>
                        <span>
                           
                          (-)
                        </span>
                      </strong>
                    </div>
                  </li>
                </ul>
              </section>
              <section
                class="sr-result-section sr-result-next-steps"
              >
                <h2>
                  More information
                </h2>
                <div
                  class=""
                >
                  <p>
                    Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
                  </p>
                  <ul
                    class="sr-multi-column"
                  >
                    <li>
                      Fever or chills
                    </li>
                    <li>
                      Cough
                    </li>
                    <li>
                      Shortness of breath or difficulty breathing
                    </li>
                    <li>
                      Fatigue
                    </li>
                    <li>
                      Muscle or body aches
                    </li>
                    <li>
                      Headache
                    </li>
                    <li>
                      Loss of taste or smell
                    </li>
                    <li>
                      Sore throat
                    </li>
                    <li>
                      Congestion or runny nose
                    </li>
                    <li>
                      Nausea or vomiting
                    </li>
                    <li>
                      Diarrhea
                    </li>
                  </ul>
                  <p>
                    For more information, please visit the 
                    <a
                      href="https://www.cdc.gov/"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Centers for Disease Control and Prevention (CDC)
                    </a>
                     website or contact
your local health department.
                  </p>
                </div>
              </section>
            </main>
            <footer>
              <p>
                Test result printed
                 
                1/1/2021, 12:00:00 AM
              </p>
            </footer>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-react-modal-body-trap=""
      style="position: absolute; opacity: 0;"
      tabindex="0"
    />
    <div
      class="ReactModalPortal"
    />
  </body>,
  "container": <div>
    <div
      class="ReactModal__Overlay sr-test-results-modal-overlay"
    >
      <div
        aria-label="Printable test result"
        aria-modal="true"
        class="ReactModal__Content sr-test-results-modal-content"
        role="dialog"
        tabindex="-1"
      >
        <div
          class="display-flex flex-align-center maxw-tablet grid-container patient-header padding-x-0 dont-print"
        >
          <div
            lang="es"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="svg-inline--fa fa-globe fa-w-16 margin-right-1"
                data-icon="globe"
                data-prefix="fas"
                focusable="false"
                role="img"
                viewBox="0 0 496 512"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M336.5 160C322 70.7 287.8 8 248 8s-74 62.7-88.5 152h177zM152 256c0 22.2 1.2 43.5 3.3 64h185.3c2.1-20.5 3.3-41.8 3.3-64s-1.2-43.5-3.3-64H155.3c-2.1 20.5-3.3 41.8-3.3 64zm324.7-96c-28.6-67.9-86.5-120.4-158-141.6 24.4 33.8 41.2 84.7 50 141.6h108zM177.2 18.4C105.8 39.6 47.8 92.1 19.3 160h108c8.7-56.9 25.5-107.8 49.9-141.6zM487.4 192H372.7c2.1 21 3.3 42.5 3.3 64s-1.2 43-3.3 64h114.6c5.5-20.5 8.6-41.8 8.6-64s-3.1-43.5-8.5-64zM120 256c0-21.5 1.2-43 3.3-64H8.6C3.2 212.5 0 233.8 0 256s3.2 43.5 8.6 64h114.6c-2-21-3.2-42.5-3.2-64zm39.5 96c14.5 89.3 48.7 152 88.5 152s74-62.7 88.5-152h-177zm159.3 141.6c71.4-21.2 129.4-73.7 158-141.6h-108c-8.8 56.9-25.6 107.8-50 141.6zM19.3 352c28.6 67.9 86.5 120.4 158 141.6-24.4-33.8-41.2-84.7-50-141.6h-108z"
                  fill="currentColor"
                />
              </svg>
              Español
            </button>
          </div>
          <div
            class="sr-result-print-buttons dont-print"
          >
            <button
              class="usa-button usa-button--unstyled"
              type="button"
            >
              Close
            </button>
            <button
              class="usa-button"
              type="button"
            >
              Print
            </button>
          </div>
        </div>
        <div
          class="sr-test-result-report"
        >
          <header
            class="display-flex flex-align-end flex-justify margin-bottom-1"
          >
            <h1>
              Test result: COVID-19
            </h1>
            <img
              alt="SimpleReport logo"
              class="sr-print-logo dont-print"
              src="simplereport-logo-black.svg"
            />
            <h2
              class="display-none sr-show-on-print"
            >
              SimpleReport
            </h2>
          </header>
          <main>
            <section
              class="sr-result-section sr-result-patient-details"
            >
              <h2>
                Patient details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Name
                  </b>
                  <div>
                    First Middle Last
                  </div>
                </li>
                <li>
                  <b>
                    Date of birth
                  </b>
                  <div>
                    08/07/1990
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-facility-details"
            >
              <h2>
                Testing facility details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Facility name
                  </b>
                  <div>
                    Facility Name
                  </div>
                </li>
                <li>
                  <b>
                    Facility phone
                  </b>
                  <div>
                    6318675309
                  </div>
                </li>
                <li>
                  <b>
                    Facility address
                  </b>
                  <div
                    class="sr-result-facility-details-address"
                  >
                    <span>
                      555 Fake St
                    </span>
                    <span>
                      Raleigh
                      , 
                      NC
                       
                      27601
                    </span>
                  </div>
                </li>
                <li>
                  <b>
                    CLIA number
                  </b>
                  <div>
                    12D4567890
                  </div>
                </li>
                <li>
                  <b>
                    Ordering provider
                  </b>
                  <div>
                    Ordering Provider
                  </div>
                </li>
                <li>
                  <b>
                    NPI
                  </b>
                  <div>
                    fake-npi
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-test-details"
            >
              <h2>
                Test details
              </h2>
              <ul
                class="sr-details-list"
              >
                <li>
                  <b>
                    Test ID
                  </b>
                  <div>
                    id
                  </div>
                </li>
                <li>
                  <b>
                    Test name
                  </b>
                  <div>
                    Fake device
                  </div>
                </li>
                <li>
                  <b>
                    Test device
                  </b>
                  <div />
                </li>
                <li
                  class="sr-margin-bottom-28px"
                >
                  <b>
                    Test date
                  </b>
                  <div>
                    01/28/2022 5:56pm
                  </div>
                </li>
                <li>
                  <b>
                    COVID-19
                  </b>
                  <div>
                    <strong>
                      <span
                        class="text-uppercase"
                      >
                        Negative
                      </span>
                      <span>
                         
                        (-)
                      </span>
                    </strong>
                  </div>
                </li>
              </ul>
            </section>
            <section
              class="sr-result-section sr-result-next-steps"
            >
              <h2>
                More information
              </h2>
              <div
                class=""
              >
                <p>
                  Contact your health care provider to decide if additional testing is needed, especially if you experience any of these symptoms:
                </p>
                <ul
                  class="sr-multi-column"
                >
                  <li>
                    Fever or chills
                  </li>
                  <li>
                    Cough
                  </li>
                  <li>
                    Shortness of breath or difficulty breathing
                  </li>
                  <li>
                    Fatigue
                  </li>
                  <li>
                    Muscle or body aches
                  </li>
                  <li>
                    Headache
                  </li>
                  <li>
                    Loss of taste or smell
                  </li>
                  <li>
                    Sore throat
                  </li>
                  <li>
                    Congestion or runny nose
                  </li>
                  <li>
                    Nausea or vomiting
                  </li>
                  <li>
                    Diarrhea
                  </li>
                </ul>
                <p>
                  For more information, please visit the 
                  <a
                    href="https://www.cdc.gov/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    Centers for Disease Control and Prevention (CDC)
                  </a>
                   website or contact
your local health department.
                </p>
              </div>
            </section>
          </main>
          <footer>
            <p>
              Test result printed
               
              1/1/2021, 12:00:00 AM
            </p>
          </footer>
        </div>
        <div
          class="sr-result-print-buttons dont-print"
        >
          <button
            class="usa-button usa-button--unstyled"
            type="button"
          >
            Close
          </button>
          <button
            class="usa-button"
            type="button"
          >
            Print
          </button>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
